--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.3.4
 autopep8==1.5.7
 certifi==2020.12.5
 chardet==4.0.0
+codecov==2.1.11
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==5.5
 Django==3.2.1
 django-cors-headers==3.7.0
 django-restframework==0.0.1
