--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pyparsing==2.4.7
 python-dotenv==0.17.1
 pytz==2021.1
 requests==2.25.1
+gunicorn==20.1.0
 ruamel.yaml==0.17.4
 ruamel.yaml.clib==0.2.2
 sqlparse==0.4.1
