--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-restframework==0.0.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.1.1
 drf-yasg==1.20.0
+gunicorn==20.1.0
 idna==2.10
 inflection==0.5.1
 itypes==1.2.0
@@ -24,7 +25,6 @@ pyparsing==2.4.7
 python-dotenv==0.17.1
 pytz==2021.1
 requests==2.25.1
-gunicorn==20.1.0
 ruamel.yaml==0.17.4
 ruamel.yaml.clib==0.2.2
 sqlparse==0.4.1
@@ -32,3 +32,4 @@ toml==0.10.2
 typing-extensions==3.10.0.0
 uritemplate==3.0.1
 urllib3==1.26.4
+whitenoise==5.2.0
